# open_to_work

./: .gitignore  README.md  pyproject.toml
app/: 1_home.py  2_home.py  backup.py  pipeline.py
app/pages/: 2_People_Analytics.py  2_overview.py  3_Our_Talents.py
