[tool.poetry]
name = "Dashboard_Candidates"
version = "0.1.0"
description = ""
authors = ["Vanessa Gaigher <vanessa.mat.sedu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
gspread = "^6.1.2"
streamlit = "^1.36.0"
oauth2client = "^4.1.3"
plotly = "^5.23.0"
openpyxl = "^3.1.5"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
